mikea/style.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root{
    --color: cornflowerblue;
}
html{
    font-family: 'Work Sans', sans-serif;
}
body{
    margin: 0;
}
main{
    max-width: 1000px;
    padding: 20px;
    /* min-height: 100vh; */
    margin: 0 auto;
    /* background: lightcoral; */
}
.fullwidth{
    max-width:none;
}
#home{
    height: 100vh;
    background-color: grey;
    overflow: hidden;
}
#login, #signup{
    overflow: hidden;
}

section{
    position: relative;
    top: 10vh;
}
h1{
    font-size: 2em;
    font-weight: 500;
    margin: 0.2em 0;
}
h2{
    font-size: 1.2em;
    font-weight: 500;
    margin: 10px 0;
}
h3{
    margin: 10px 0;
    font-weight: 500;
    font-size: 1.1em;
}
p{
    margin: 10px 0;
}
figcaption{
    text-align: center;
}
a:link, a:visited{
    color:var(--color);
    text-decoration: none;
}
a:hover{
    text-decoration: underline wavy;
    text-decoration-skip-ink: none;
}

::selection{
    background: cornflowerblue;
}

#door{
    display: flex;
    flex-direction: column;
    margin: 15vh auto;
    width: min-content;
    top: 0;

}
#frontdoor{
    background-color: white;
    position: relative;
    width: 200px;
    height: 300px;
    margin: 0 auto;
}
#backdoor{
    background-color: var(--color);
    position: absolute;
    top: 0px;
    left: 0px;
    width: 200px;
    height: 300px;

    transform-origin: left;
    transition: all 0.5s ease-in-out;
}
.doorOpen{
    transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(-105deg);
}
#welcome{
    text-align: center;
    opacity: 0;
    transition: 1s ease-out;
    margin-top: 20px;
}
nav{
    position: fixed;
    top: 30px;
    right: 30px;
    z-index: 4;
}
#menuToggle{
    display: block;
    position: relative;
    z-index: 1;
    -webkit-user-select: none;
    user-select: none;
}
#menuToggle input{
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    cursor: pointer;
    opacity: 0;
    z-index: 2;
    -webkit-touch-callout: none;
}
#menuToggle span{
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    background: black;
    border-radius: 3px;
    z-index: 1;
    transform-origin: 4px 0px;
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                opacity 0.55s ease;
}
#menuToggle span:first-child{
  transform-origin: 0% 0%;
}
#menuToggle span:nth-last-child(2){
  transform-origin: 0% 100%;
}
#menuToggle input:checked ~ span{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}
#menuToggle input:checked ~ span:nth-last-child(3){
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}
#menuToggle input:checked ~ span:nth-last-child(2){
  transform: rotate(-45deg) translate(0, -1px);
}
#menu{
  position: absolute;
  right: -30px;
  width: 100px;
  height: 100vh;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  background: #ededed;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0% 0%;
  transform: translate(100%, 0);
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}
#menu li{
  padding: 10px 0;
  font-size: 22px;
  text-align: right;
}
#menuToggle input:checked ~ ul{
  transform: none;
}


#rooms{
    display: grid;
    grid: 1fr 1fr / 1fr 1fr 1fr;
    margin: auto auto;
    position: relative;
    top: 80px;
    gap: 3% 5%;
}
#rooms a:link figure img{
    width: 100%;
    height: 100%;
    background-color: grey;
}

.breadcrumb{
    z-index: 5;
    position: fixed;
    top: 20px;
    left: 20px;
    margin: 0;
    font-weight: 400;
}
.breadcrumb a:link, .breadcrumb a:visited{
    color: black;
}
.breadcrumb strong{
    font-weight: 500;
    color: var(--color);
}
#living-room{
    background-image: url("https://cdn.home-designing.com/wp-content/uploads/2013/10/angular-living-room-1024x640.jpg");
    background-repeat: no-repeat;
    background-size:contain;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}
#plant{
    position: absolute;
    bottom: 10vh;
    right: 10vw;
}
#plant_lg{
    /* background-color:lime; */
    width: 400px;
    height: 500px;
}
#plant_lg:hover{
    cursor:grab;
}
/* #plant_lg:active{
    cursor:grabbing;
} */
#product{
    display: grid;
    grid: 1fr / 1fr 1fr;
}
.option_btn{
    border-radius: 50%;
    margin: 10px 5px;
    width: 30px;
    height: 30px;
}
#plant_blue{
    background-color: cornflowerblue;
}
#plant_pink{
    background-color: pink;
}
#plant_coral{
    background-color: coral;
}
#plant_yellow{
    background-color: gold;
}
#plant_white{
    background-color: whitesmoke;
}
.add_to_cart{
    margin: 10px 5px;
}
#microchip{
    color: var(--color);
}
#microchip:hover{
    cursor: pointer;
    text-decoration: underline wavy;
    text-decoration-skip-ink: none;
}
#ref .modal_content{
    margin-top: 5vh;
}
th, td{
    padding: 5px 5px 5px 20px;
}
#reviews{
    padding: 20px 20px 50px 20px;
}
.review{
    margin: 40px;
    padding: 20px;
    outline: 1px solid black;
}
.review div{
    display: flex;
    justify-content: space-between;
    margin: 0;
    padding: 0;
}
.review h2{
    margin: 0;
    color: var(--color);
}

.split{
    display: flex;
    /* padding: 10px; */
    justify-content: space-around;
}
#cart_box{
    background: lightgrey;
    width: 70vw;
    height: 80vh;
    /* touch-action: none; */
    position: relative;
}
.cartPlant{
    width: 200px;
    height: 200px;
    position: absolute;
    /* background-color: turquoise; */
}
#cart_reciept{
    max-height: 80vh;
}
#cart_reciept_box{
    outline: 1px solid black;
    width: 20vw;
    padding: 20px;
}
#price_list, #subprice, #tax, #total_price{
    text-align: right;
}
.two{
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid black;
}

.checkout_box{
    width: 70vw;
    outline: 1px solid black;
    padding: 20px;
    margin-bottom: 20px;
}
#checkout_address, #checkout_payment{
    display: grid;
    grid: 1fr / 0.5fr 0.6fr 0.5fr 0.4fr;
}
.checkout_box button{
    width:fit-content;
    height: fit-content;
}
.checkout_box input{
    height:fit-content;
    width: 50%;
    margin: auto 0;
}
#scan_payment, #scan_address{
    margin-left: auto;
}
#login, #signup{
    height: 100vh;
    /* background-color: blue; */
}
#loginBox, #signupBox{
    width:200px;
    margin: 15vh auto;
}
.hidden{
    visibility: hidden;
}
.modal{
    display: none;
    position: fixed;
    z-index: 5;
    left: 0;
    top:0;
    width: 100%;
    height: 100%;
    overflow: none;
    background-color: black;
    background-color: rgba(0,0,0,0.4);
}
.modal_content{
    background-color: #fefefe;
    margin: 5% auto;
    padding: 20px; 
    border: 1px solid #888;
    width: fit-content;
    text-align: center;
}
#scan .modal_content{
    width: min-content;
}
video {
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
}
button{
    border: none;
    border-radius: 20px;
    font-family: 'Work Sans', sans-serif;
    cursor: pointer;
    padding: 0.5em 0.75em;
    font-size: 1em;
    margin: 10px 0;
}
.close{
    color: #aaa;
    float: right;
    font-size: 1.5em;
    font-weight: 500;
}
.close:hover, .close:focus{
    color: black;
    text-decoration: none;
    cursor: pointer;
}
#confirm{
    float: right;
}
#confirmation .modal_content, #loginTrue .modal_content{
    height: min-content;
    padding: 50px;
    margin-top: 30vh;
}

